Fixed type-os in swfuploadr4.js Fixed links and file names in the demo pages. Fixed css for Cancel button in the MultiUpload Demo.  It was unclickable because it was overlapped by the other divs

--- a/formsdemo/default.aspx.css
+++ b/formsdemo/default.aspx.css
@@ -1,7 +1,7 @@
 ﻿* 
 {
-	font-family: Verdana;
-	font-size: 10pt;
+	font-family: inherit;
+	font-size: inherit;
 }
 
 html, body, form 
@@ -9,11 +9,28 @@ html, body, form
 	margin: 0;
 	padding: 0;
 	width: 100%;
+
+	font-family: Verdana;
+	font-size: 10pt;
+
 }
 
 td 
 {
 	vertical-align: top;
+}
+
+a.inherit,
+a.inherit:link,
+a.inherit:active,
+a.inherit:visited,
+a.inherit:hover 
+{
+	font-size: inherit;
+	font-weight: inherit;
+	color: inherit;
+	text-decoration: inherit;
+	font-family: inherit;	
 }
 
 div.title 
@@ -42,16 +59,6 @@ legend
 	font-size: 11pt;
 	font-weight: bold;
 	color: Black;
-}
-
-a.SWFUploadLink {
-	font-weight: bold;
-	color: blue;
-	text-decoration: none;
-}
-
-a.SWFUploadLink:hover {
-	text-decoration: underline;
 }
 
 div.flash
